--- a/index.html
+++ b/index.html
@@ -172,13 +172,57 @@
     </div>
 </div>
 
-<div class = "footer">
-    <div class = "footer-bg">
-        <a class = "footer-text" href = "#" target = "_blank">
-            This is a footer
-        </a>
+<div class="footer">
+    <div class="footer-container">
+        <!-- Logo and About Us -->
+        <div class="footer-section">
+            <img src="./resources/uhd-gator-head-bw.png" alt="Logo" class="footer-logo">
+            
+            <p>About Us: We are a team dedicated to bringing you the best services and products.</p>
+        </div>
+
+        <!-- Sitemap -->
+        <div class="footer-section">
+            <h3>Sitemap</h3>
+            <ul class="sitemap">
+                <li><a href="#">Home</a></li>
+                <li><a href="#layer-2-anchor">Products</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>            
+        </div>
+
+        <!-- Contact Information -->
+        <div class="footer-section">
+            <h3>Contact Information</h3>
+            <p>Phone: (123) 456-7890</p>
+            <p>Email: <a href="mailto:info@example.com">info@example.com</a></p>
+            <p>Address: 123 Main St, Hometown, USA</p>
+        </div>
+
+        <!-- Social Media Icons -->
+        <div class="footer-section">
+            <h3>Follow Us</h3>
+            <div class="social-icons">
+                <a href="#" target="_blank"><img src="./resources/logo-facebook-circle-png-pictures-9.png" alt="Facebook"></a>
+                <a href="#" target="_blank"><img src="./resources/R.png" alt="Twitter"></a>
+                <a href="#" target="_blank"><img src="./resources/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.webp" alt="Instagram"></a>
+            </div>
+        </div>
+
+        <!-- Email Sign-Up -->
+        <div class="footer-section">
+            <h3>Sign Up for Updates</h3>
+            <form class="email-signup">
+                <input type="email" placeholder="Enter your email" required>
+                <button type="submit">Sign Up</button>
+            </form>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
     </div>
 </div>
+
 
 </body>
 
