update the code for link to my personal page

--- a/LongChauu home page/Longchau.html
+++ b/LongChauu home page/Longchau.html
@@ -312,7 +312,7 @@
 
     <div class="container">
       <div class="profile-section">
-        <img src="my-pic.jpg" alt="My Picture" />
+        <img src="./my-pic.jpg" alt="My Picture" />
         <div class="text-container">
           <p>
             Hello! My name is Long Chau. I'm currently in my last year studying
