--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <br>
             <div class = "contributor"><a class = "contributor-link" href = "#" target = "_blank">Scott</a></div>
             <br>
-            <div class = "contributor"><a class = "contributor-link" href = "#" target = "_blank">Long</a></div>
+            <div class = "contributor"><a class = "contributor-link" href = "./LongChauu home page/Longchau.html" target = "_blank">Long</a></div>
             <br>
             <div class = "contributor"><a class = "contributor-link" href = "#" target = "_blank">Omar</a></div>
             <br>
@@ -219,7 +219,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2024 UHgeekDom. All rights reserved.</p>
     </div>
 </div>
 
