--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="footer-container">
         <!-- Logo and About Us -->
         <div class="footer-section">
-            <img src="./resources/uhd-gator-head-bw.png" alt="Logo" class="footer-logo">
+            <img src="./resources/uhd-cst-logo-2.png" alt="Logo" class="footer-logo">
             
             <p>About Us: We are a team dedicated to bringing you the best services and products.</p>
         </div>
@@ -187,7 +187,7 @@
             <ul class="sitemap">
                 <li><a href="#">Home</a></li>
                 <li><a href="#layer-2-anchor">Products</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#layer-4-anchor">Contact Us</a></li>
             </ul>            
         </div>
 
