Changed footer color to match school colors. Removed box on layer 1.

--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
 </div>
 
 <div class = "layer-1">
-    <div class = "layer-1-bg-sources">
+    <!--<div class = "layer-1-bg-sources">
         <a class = "layer-1-bg-source-1" href = "#" target = "_blank">Lorem Ipsom Delta Filler</a>
         <br>
-        <a class = "layer-1-bg-source-2" href = "#" target = "_blank">Filler Text 2 Goes Here</a></div>
+        <a class = "layer-1-bg-source-2" href = "#" target = "_blank">Filler Text 2 Goes Here</a>
+    </div>-->
     <div class = "layer-1-container">
         <div class = "layer-1-left">
             <div class = "goty">
